2007-05-04  Lluis Sanchez Gual <lluis@novell.com> 

	* AspNetEdit.addin.xml: Migration to Mono.Addins.

2007-04-24  Lluis Sanchez Gual <lluis@novell.com> 

	* AspNetEdit.mdp, Makefile.am: Fix build.

2007-03-07  Michael Hutchinson <m.j.hutchinson@gmail.com> 

	* AspNetEdit.Editor.Persistence/ServerControlParsingObject.cs:
	  Use lowercase comparison for event prefix.
	  
	* AspNetEdit.Integration/MonoDevelopProxy.cs: Ensure GUI thread safety
	  for event binding.

2007-03-07  Michael Hutchinson <m.j.hutchinson@gmail.com>

	* chrome/Makefile.am: The install tasks should depend on the files 
	  they're installing.

2007-03-06  Michael Hutchinson <m.j.hutchinson@gmail.com>

	* AspNetEdit.Integration/AspNetEditViewContent.cs,
	  AspNetEdit.Integration/MonoDevelopProxy.cs:
	  Ensure that remoted MonoDevelopProxy object is kept available by 
	  overriding InitializeLifetimeService, and make sure to disconnect 
	  it afterwards.

2007-03-06  Lluis Sanchez Gual <lluis@novell.com> 

	* AspNetEdit.mdp: Don't local-copy references.
	* AspNetEdit.Integration/AspNetEditViewContent.cs: Implement
	  ICustomPropertyPadProvider in the frame that contains the editor,
	  and return the remote property grid when requested.

2007-02-24  Michael Hutchinson <m.j.hutchinson@gmail.com> 
	
	* AspNetEdit.Editor.UI/RootDesignerView.cs: New UpdateRender method.
	Change behaviour of JSDeserializeAndAdd. It's a one-way function now;
	JS can give just offload pasted ASP.NET code to host and forget about 
	it. The C# host will take it from there.
	
	* AspNetEdit.Editor/EditorHost.cs:
	Bump some code into GUI thread so it can handle exceptions. It's less 
	fragile than remoting.
	Use ToolboxDataAttribute attributes when handling toolbox items. Relies
	on improvements to Document.InsertFragment.
	
	* AspNetEdit.Editor.ComponentModel/Document.cs,
	* AspNetEdit.Editor.ComponentModel/DesignerHost.cs,
	* AspNetEdit.Editor.Persistence/ServerControlParsingObject.cs: